# mlops2025w_142502009

./: dummy1.py  dummy2.py  dummy3.py  dummy4.py  dummy5.py  test.txt
assignments/: MLops_assignment6.ipynb  mlops_assignment5.ipynb
assignments/assignment4/: config.py  config_localatlas.py  question1.py  question1.sql  question2.py  question3_curd_mongo.py  question3_curd_sql.py  question4.py  schema.py
assignments/git-assignments-142502009/: README.md
assignments/git-assignments-142502009/docs/: usage.md
assignments/git-assignments-142502009/src/: utils.py
assignments/resnet_pipeline/: data_and_arch.json  grid_search.json  model_params.toml  pipeline.py  pyproject.toml
class/: Snorkel_on_IMDB.ipynb  addof2num.sh  cifar100_wandb_hf.ipynb  factofnum.sh  input.txt  line_count.sh  mlops_wandb_monitoring_lab.ipynb  sum.sh  sum_rev.sh  wandb_cloud_deploy_lab_detailed.ipynb
class/iris-mlflow-project/source/: train.py
class/iris-mlflow-project/source/mlflow-envho/: pyvenv.cfg
class/iris-mlflow-project/source/mlruns/0/: meta.yaml
class/iris-mlflow-project/source/mlruns/0/177dd5cecef64bc982b2433ab72a1bd0/: meta.yaml
class/iris-mlflow-project/source/mlruns/0/6a7485ad51ab4712aebdaa65a21817b2/: meta.yaml
class/iris-mlflow-project/source/mlruns/300342066038354971/: meta.yaml
class/iris-mlflow-project/source/mlruns/300342066038354971/71f98d87cd07422ab2bfa690c8209f37/: meta.yaml
class/iris-mlflow-project/source/mlruns/808400550871543831/: meta.yaml
project/: mlops_project_ver1.ipynb
(+564 files in other folders)
